new sample1 file1

--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Hobbies</title>
 </head>
 <body>
     <h1>
-        Hello World1
+        Favorite Hobbies
     </h1>
+    <h2>Ordered and Unordered list of Hobbies:</h2>
+    <ul>
+        <li>Playing Games</li>
+        <ol>
+            <li>badminton</li>
+            <li>Chess</li>
+            <li>Cricket</li>
+        </ol>
+        <li>Listening to Music</li>
+        <ol>
+            <li>Rock</li>
+            <li>Classical</li>
+        </ol>
+        <li>Watching Movies</li>
+        <ol>
+            <li>Comedy</li>
+            <li>Horror</li>
+        </ol>
+        <li>Cooking</li>
+        <ol>
+            <li>Indian</li>
+        </ol>
+    </ul>
 </body>
 </html>
